# grocery-basket-barcode-backend

./: app.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.js
